--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -1,48 +1,15 @@
-
+{% extends 'layout/base.html' %}
 {% load static %}
-<!doctype html>
-<html dir="rtl" lang="fa-IR">
-
-<head>
-
-    <!-- META DATA -->
-    <meta charset="UTF-8">
-    <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport'>
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="calc – الگوی مدیریت و داشبورد بوت استرپ 5" name="description">
-    <meta content="limoostudio" name="author">
-    <meta content="ادمین,داشبورد ادمین,پنل ادمین,قالب مدیریت,بوت استرپ,کلین,داشبورد,فلت,جیکوئری,مدرن,ریسپانسیو,قالب ادمین حرفه ای,داشبورد ریسپانسیو,رابط کاربری,کیت رابط کاربری."
-          name="keywords">
+{% block head %}
 
     <!-- FAVICON -->
     <link href="{% static '' %}images/brand/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 
     <!-- TITLE -->
-    <title>calc – الگوی مدیریت و داشبورد بوت استرپ 5</title>
+    {% block title %}calc – سیستم مالی و حسابداری {% endblock %}
 
-    <!-- BOOTSTRAP CSS -->
-    <link href="{% static '' %}plugins/bootstrap/css/bootstrap.min.css" id="style" rel="stylesheet"/>
-
-    <!-- STYLE CSS -->
-    <link href="{% static '' %}css/style.css" rel="stylesheet"/>
-    <link href="{% static '' %}css/plugins.css" rel="stylesheet"/>
-    <link href="{% static '' %}css/dark-style.css" rel="stylesheet"/>
-    <link href="{% static '' %}css/transparent-style.css" rel="stylesheet">
-    <link href="{% static '' %}css/skin-modes.css" rel="stylesheet"/>
-
-    <!--- FONT-ICONS CSS -->
-    <link href="{% static '' %}css/icons.css" rel="stylesheet"/>
-
-    <!-- COLOR SKIN CSS -->
-    <link href="{% static '' %}colors/color1.css" id="theme" media="all" rel="stylesheet" type="text/css"/>
-    <link href="{% static '' %}switcher/css/switcher.css" rel="stylesheet"/>
-    <link href="{% static '' %}switcher/demo.css" rel="stylesheet"/>
-
-    <link href="{% static '' %}fonts/styles-fa-num/iran-yekan.css" id="fonts" rel="stylesheet">
-    <link href="{% static '' %}css/rtl.css" rel="stylesheet"/>
-</head>
-
-<body class="app sidebar-mini rtl">
+{% endblock %}
+{% block body %}
 <div class="switcher-wrapper">
     <div class="demo_changer">
         <div class="form_holder sidebar-right1">
@@ -1871,6 +1838,7 @@
 <!-- BACK-TO-TOP -->
 <a href="#top" id="back-to-top"><i class="fa fa-angle-up"></i></a>
 
+{% block js %}
 <!-- JQUERY JS -->
 <script src="{% static '' %}js/jquery.min.js"></script>
 
@@ -1914,7 +1882,5 @@
 <!-- Switcher js -->
 <script src="{% static '' %}switcher/js/switcher.js"></script>
 
-</body>
-
-
-</html>
+{% endblock %}
+{% endblock %}
