add dashboard.html to index

--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -27,6 +27,7 @@
 
                 <!-- CONTAINER -->
                 <div class="main-container container-fluid">
+                    {% include 'index/dashboard.html' %}
                 </div>
                 <!-- CONTAINER CLOSED -->
             </div>
