--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -59,46 +59,41 @@
 
 {% block js %}
 <!-- JQUERY JS -->
-<script src="{% static '' %}js/jquery.min.js"></script>
+<script src="{% static '' %}/js/jquery.min.js"></script>
 
 <!-- BOOTSTRAP JS -->
-<script src="{% static '' %}plugins/bootstrap/js/popper.min.js"></script>
-<script src="{% static '' %}plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="{% static '' %}/plugins/bootstrap/js/popper.min.js"></script>
+<script src="{% static '' %}/plugins/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- TypeHead js -->
-<script src="{% static '' %}plugins/bootstrap5-typehead/autocomplete.js"></script>
-<script src="{% static '' %}js/typehead.js"></script>
-
-<!-- INTERNAL Notifications js -->
-<script src="{% static '' %}plugins/notify/js/rainbow.js"></script>
-<script src="{% static '' %}plugins/notify/js/jquery.growl.js"></script>
-<script src="{% static '' %}plugins/notify/js/notifIt.js"></script>
+<script src="{% static '' %}/plugins/bootstrap5-typehead/autocomplete.js"></script>
+<script src="{% static '' %}/js/typehead.js"></script>
 
 <!-- Perfect SCROLLBAR JS-->
-<script src="{% static '' %}plugins/p-scroll/perfect-scrollbar.js"></script>
-<script src="{% static '' %}plugins/p-scroll/pscroll.js"></script>
-<script src="{% static '' %}plugins/p-scroll/pscroll-1.js"></script>
-
-<!-- SIDE-MENU JS -->
-<script src="{% static '' %}plugins/sidemenu/sidemenu.js"></script>
+<script src="{% static '' %}/plugins/p-scroll/perfect-scrollbar.js"></script>
+<script src="{% static '' %}/plugins/p-scroll/pscroll.js"></script>
+<script src="{% static '' %}/plugins/p-scroll/pscroll-1.js"></script>
 
 <!-- SIDEBAR JS -->
-<script src="{% static '' %}plugins/sidebar/sidebar.js"></script>
+<script src="{% static '' %}/plugins/sidebar/sidebar.js"></script>
+
+<!--SIDE-MENU JS -->
+<script src="{% static '' %}/plugins/sidemenu/sidemenu.js"></script>
 
 <!-- Color Theme js -->
-<script src="{% static '' %}js/themeColors.js"></script>
+<script src="{% static '' %}/js/themeColors.js"></script>
 
 <!-- Sticky js -->
-<script src="{% static '' %}js/sticky.js"></script>
+<script src="{% static '' %}/js/sticky.js"></script>
 
 <!-- CUSTOM JS -->
-<script src="{% static '' %}js/custom.js"></script>
+<script src="{% static '' %}/js/custom.js"></script>
 
 <!-- Custom-switcher -->
-<script src="{% static '' %}js/custom-swicher.js"></script>
+<script src="{% static '' %}/js/custom-swicher.js"></script>
 
 <!-- Switcher js -->
-<script src="{% static '' %}switcher/js/switcher.js"></script>
+<script src="{% static '' %}/switcher/js/switcher.js"></script>
 
 {% endblock %}
 {% endblock %}
